tweaked notif controller
