# api-docs.yaml
@@ -1455,12 +1455,12 @@ paths:
       description: "Takes in a request object, then extracts the requesting user to\
         \ send them an email about their updated request"
       operationId: requestStatusUpdatedNotify
-      parameters:
-      - name: request
-        in: query
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Request"
         required: true
-        schema:
-          $ref: "#/components/schemas/Request"
       responses:
         "200":
           description: The user was successfully emailed
@@ -1538,6 +1538,65 @@ paths:
               schema:
                 type: string
               example: "Error: unable to update request"
+  /notifs/notifications:
+    post:
+      tags:
+      - notification-controller
+      summary: Checks all filters for any emails or notifications that need to be
+        sent
+      description: "Takes in no input, and returns all of the deadlines that are soon\
+        \ or past, a new request that was made, and allocation that was not spent"
+      operationId: checkAllNotifications
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EmailAlerts"
+        required: true
+      responses:
+        "200":
+          description: The admins were successfully emailed
+          content:
+            text/plains:
+              schema:
+                type: string
+              example: Successfully sent all emails
+        "500":
+          description: Unable to send email
+          content:
+            text/plain:
+              schema:
+                type: string
+              example: "Error: failed to send email(s)"
+  /notifs/alerts:
+    post:
+      tags:
+      - notification-controller
+      summary: Checks all filters for any alerts or non-urgent pop-ups that need to
+        be sent
+      description: "Takes in no input, and returns all of the deadlines that are soon\
+        \ or past"
+      operationId: checkAllAlerts
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EmailAlerts"
+        required: true
+      responses:
+        "200":
+          description: The alerts were successfully returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AlertsNeeded"
+              example:
+              - deadline: 2026-05-23T05:00:00
+                nameDeadline: expense item deadline
+                id: 5
+                itemName: pencils
   /groups/create_group:
     post:
       tags:
@@ -2765,6 +2824,79 @@ components:
       - location
       - name
       - philanthropyFlag
+    EmailAlerts:
+      type: object
+      properties:
+        reimbursementDeadline:
+          type: integer
+          format: int32
+          description: A flag for if notifications for the reimbursement deadline
+            for expenses are on
+          example: 1
+        itemDeadline:
+          type: integer
+          format: int32
+          description: A flag for if notifications for the item deadline for expenses
+            are on
+          example: 1
+        allocationDeadline:
+          type: integer
+          format: int32
+          description: A flag for if notifications for the allocation deadline for
+            expenses are on
+          example: 1
+        deliberationDeadline:
+          type: integer
+          format: int32
+          description: A flag for if notifications for the deliberation deadline for
+            expenses are on
+          example: 1
+        requestDeadline:
+          type: integer
+          format: int32
+          description: A flag for if notifications for the deadline for requests are
+            on
+          example: 1
+        allocationNotSpent:
+          type: integer
+          format: int32
+          description: A flag for if notifications for allocated money not spent for
+            expenses are on
+          example: 1
+      required:
+      - allocationDeadline
+      - allocationNotSpent
+      - deliberationDeadline
+      - itemDeadline
+      - reimbursementDeadline
+      - requestDeadline
+    AlertsNeeded:
+      type: object
+      properties:
+        deadline:
+          type: string
+          format: date-time
+          description: The deadline for the alert
+          example: 2026-05-23T05:00:00
+        nameDeadline:
+          type: string
+          description: "Name of the deadline for the alert (the type of deadline ex.\
+            \ reimbursement, deliberation, etc) with the table name before it"
+          example: expense item deadline
+        id:
+          type: integer
+          format: int32
+          description: The id of the expense/request that has that deadline
+          example: 5
+        itemName:
+          type: string
+          description: The name of the expense/request that has that deadline
+          example: pencils
+      required:
+      - deadline
+      - id
+      - itemName
+      - nameDeadline
     AmountRequested:
       type: object
       properties:
